<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Hospital_2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/rsu_prima_husada"
            android:scaleType="fitXY"
            android:contentDescription="@string/img_hospital_1"/>
        <TextView
            style="@style/TextContent.Black"
            android:text="RSU Prima Husada Malang"
            android:layout_marginTop="16dp"
            android:textSize="28sp"
            android:layout_marginBottom="8dp"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/deskripsi"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_hospital_2"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/black"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pointer"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@string/pointer" />

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/alamat_hospital_2"
                            android:textColor="@android:color/black"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/room_available_H2"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="8dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/number_phone_H2"
                            android:layout_marginTop="16dp"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>
                </TableRow>

            </TableRow>
        </TableLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/button"
            android:text="@string/contact_this_hospital"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>