<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_item_detail"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/rsu_prima_husada"
            android:scaleType="fitXY"
            android:contentDescription="@string/img_hospital" />

        <TextView
            android:id="@+id/tv_item_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_hospital"
            android:layout_marginTop="16dp"
            android:textSize="28sp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/pointer"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@string/pointer" />

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_address"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:text="@string/address"
                            android:textColor="@android:color/black"
                            android:layout_marginEnd="16dp"
                            android:layout_weight="1"/>

                        <TextView
                            android:id="@+id/tv_room"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/room_available"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="8dp"/>

                        <TextView
                            android:id="@+id/tv_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/number_phone"
                            android:layout_marginTop="16dp"
                            android:textColor="@android:color/black"/>
                    </LinearLayout>
                </TableRow>

            </TableRow>
        </TableLayout>

    </LinearLayout>




</ScrollView>